--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_mutant?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=DBALuciano
-spring.datasource.password=gd2021
+spring.application.name=heroku_cd996585c8957e6
+server.port=${PORT:0}
+
+spring.datasource.url=jdbc:mysql://us-cdbr-east-04.cleardb.com:3306/heroku_cd996585c8957e6user=b7300084604735&password=894cc7cd
+spring.datasource.username=b7300084604735
+spring.datasource.password=894cc7cd
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.database.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #Variable de entorno
-server.port=9001
+
+
+#mysql://b7300084604735:894cc7cd@us-cdbr-east-04.cleardb.com/heroku_cd996585c8957e6?reconnect=true
