--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
     	<version>5.8.1</version>
     	<scope>test</scope>
 	</dependency>
+
+	<dependency>
+		<groupId>com.tngtech.archunit</groupId>
+			<artifactId>archunit-junit5</artifactId>
+			<version>0.22.0</version>
+			<scope>test</scope>
+	</dependency>
 	
 	<dependency>
     	<groupId>org.springframework.boot</groupId>
